# lunabot-xmlq-docker

./: .gitignore  README.md  docker-compose.yaml
data/alive/: db.json
deck_recommender/: .dockerignore  .gitignore  Dockerfile  README.md  config.docker.yaml  config.yaml  process_pool.py  requirements.txt  serve.py  utils.py
lunabot-nonebot/: .dockerignore  .env  .env.docker  .gitignore  Dockerfile  README.md  bot.py  requirements.txt
lunabot-server/: .gitignore  Dockerfile  LICENSE  config.docker.yaml  go.mod  main.go
lunabot_nonebot/: .dockerignore  .env.docker  .gitignore  Dockerfile  pyproject.toml  requirements.txt
lunabot_nonebot/config/: alive.yaml  global.yaml
lunabot_nonebot/config/sekai/: asset.yaml  gameapi.yaml  sekai.yaml
lunabot_nonebot/config/sekai/bg_preset/: blue.yaml
lunabot_nonebot/config_docker/: alive.yaml  global.yaml
lunabot_nonebot/config_docker/sekai/: asset.yaml  bonds_honor_sd_face_pos.yaml  mysekai_site_map_image_info.yaml  sekai.yaml  upload_help.txt
lunabot_nonebot/helps/: sekai.md
lunabot_nonebot/src/api/assets/: asset.py  music.py
lunabot_nonebot/src/api/game/: event.py  misc.py  user.py
lunabot_nonebot/src/plugins/helper/: __init__.py
lunabot_nonebot/src/plugins/sekai/: draw.py  handler.py  sub.py
lunabot_nonebot/src/plugins/sekai/modules/: card.py  education.py  event.py  misc.py  music.py  mysekai.py  score.py  sk.py  sk_sql.py
lunabot_nonebot/src/utils/: config.py  data.py  env.py  painter.py  plot.py  process_pool.py  utils.py
lunabot_server/: .dockerignore  .gitignore  go.sum
(+114 files in other folders)
