[project]
name = "lunabot-sekai"
version = "0.1.0"
description = "lunabot-sekai"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_picstatus"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.pytest.ini_options]
# Add the path to the directory containing the external test files.
# This tells pytest not to look inside these folders for tests.
norecursedirs = [
    ".git",
    ".venv",
    "sekai-deck-recommend-cpp",  # Add this line to exclude the problematic directory
    # or be more specific:
    # "sekai-deck-recommend-cpp/3rdparty"
]
